Support reports backfilling by specyfing custom 'to' datetime
